<?xml version="1.0"?>
<package format="2">
  <name>env_detection</name>
  <version>0.1.0</version>
  <description>
    Meta-package for the environment detection system and library.
  </description>
  <maintainer email="neduchal@kky.zcu.cz">Petr Neduchal</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/neduchal/env_detection</url>
  <url type="bugtracker">http://github.com/env_detection/issues</url>
  <author email="neduchal@kky.zcu.cz">Petr Neduchal</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>env_detection_core</exec_depend>
  <exec_depend>env_detection_msgs</exec_depend>
  <export>
    <metapackage />
  </export>
</package>
