<?xml version="1.0"?>
<package format="2">
  <name>env_detection_msgs</name>
  <version>0.1.0</version>
  <description>Definition of messages for environment detection system.</description>
  <maintainer email="neduchal@kky.zcu.cz">Petr Neduchal</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/neduchal/env_detection</url>
  <url type="bugtracker">http://github.com/neduchal/env_detection/issues</url>
  <author email="neduchal@kky.zcu.cz">Petr Neduchal</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
