<?xml version="1.0"?>
<package format="2">
  <name>env_detection_core</name>
  <version>0.1.0</version>
  <description>Core package of Environment Detection System.</description>
  <maintainer email="neduchal@kky.zcu.cz">Petr Neduchal</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/neduchal/env_detection</url>
  <url type="bugtracker">http://github.com/neduchal/env_detection/issues</url>
  <author email="neduchal@kky.zcu.cz">Petr Neduchal</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>env_detection_msgs</depend>
</package>
